--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -334,13 +334,6 @@ $deco-dot-size: 8px;
 }
 
 // Customer stories
-.customer-story-section {
-  margin-bottom: 10rem;
-}
-
-.other-customer-stories-section {
-  border-top: 1px solid $gray-200;
-}
 
 .company-summary {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -421,6 +414,10 @@ $deco-dot-size: 8px;
   &-image-wrapper {
     display: table-cell;
     vertical-align: middle;
+  }
+  &-more-stories {
+    width: 220px;
+    height: 350px;
   }
 }
 
