--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -14,12 +14,6 @@
     transform: none !important;
   }
 }
-.multi-button.btn-primary {
-  &:hover {
-    background-color: $deep-blue;
-    border-color: $deep-blue !important;
-  }
-}
 
 .btn-light:hover {
   background-color: darken($white, 0.1);
@@ -46,9 +40,9 @@
 // Multi-button
 
 .multi-button {
-  background-color: $white;
+  color: $gray-400;
+  background-color: $deep-blue;
   flex: 1 1 0px;
-  color: $gray-600;
   border-radius: 0;
   &:first-of-type {
     border-radius: $border-radius 0 0 $border-radius;
@@ -60,11 +54,12 @@
     border-radius: 0 $border-radius $border-radius 0;
   }
   &.selected {
-    color: $white;
-    background-color: $deep-blue;
+    color: $deep-blue;
+    background-color: $white;
   }
   &:hover:not(.selected) {
-    opacity: 0.75;
+    color: lighten($color: $gray-400, $amount: 10);
+    background-color: darken($color: $deep-blue, $amount: 10);
   }
 }
 
