--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -85,6 +85,14 @@
   color: $gray-400;
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
 // Custom underline
 .custom-underline u {
   text-decoration: none;
