--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -4,7 +4,7 @@
     max-width: 1050px;
   }
    @media screen and (min-width: 1440px) {
-    max-width: 1200px;
+    max-width: 1200px !important;
   }
 }
 
