--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -389,15 +389,12 @@ $deco-dot-size: 8px;
 }
 
 // About
-.ledgista-profile {
-  .gatsby-image-wrapper {
-    max-width: 245px;
+.ledgista {
+  .ledgista-image-wrapper {
+    width: 245px;
   }
   .social-icon {
     font-size: 20px;
-  }
-  .ledgista-text {
-    height: calc(100% - 245px);
   }
 }
 
