--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -29,7 +29,8 @@ $theme-colors: (
   "info": $energetic-blue,
   "success": $vibrant-green,
   "danger": $highlight-red,
-  "gray-neutral": $gray-500
+  "gray-neutral": $gray-500,
+  "black": black
 );
 
 $box-shadow:                        0 10px 20px rgba(0,0,0,0.25), 0 6px 6px rgba(0,0,0,0.22);
