create ImageModal, apply to Feature

--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -5,6 +5,7 @@
 @import "spacing";
 @import "header";
 @import "components";
+@import "modal";
 @import "markdown";
 @import "dropdown";
 @import "navbar";
