--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -32,8 +32,7 @@
   }
 }
 
-.hover-list-parent > li > a,
-.hover-list-parent > li > p {
+.dropdown-items-parent > .dropdown-item-hover > p {
   color: $white;
   display: inline-block;
   border-radius: 5px;
@@ -43,11 +42,11 @@
     padding: 10px 20px;
   }
 }
-.hover-list-parent p {
+.dropdown-items-parent p {
   cursor: default;
 }
 
-.hover-list-parent > li {
+.dropdown-items-parent > .dropdown-item-hover {
   z-index: $zindex-popup-toggler;
   position: relative;
   display: flex;
@@ -70,7 +69,7 @@
 }
 
 .trigger-enter .hover-list-child {
-  display: block;
+  display: flex;
 }
 
 .trigger-enter-active .hover-list-child {
@@ -79,9 +78,9 @@
 }
 
 .list-item-hover {
+  height: 100px;
   display: none;
   position: relative;
-  padding: 2px 8px;
   border-radius: $border-radius;
 }
 
@@ -130,6 +129,17 @@
   box-shadow: 0 0 5px 1px $gray-700;
   transform-origin: 50% 0;
   transform: translateY($navbar-min-height);
+  position: relative;
+  &::after {
+    position: absolute;
+    content: '';
+    left: 0;
+    bottom: 0;
+    height: 100%;
+    border-radius: 0.25rem 0 0 0.25rem;
+    width: 10px;
+    background-color: $light-energetic-blue;
+  }
 }
 
 .dropdown-background-transition-enter {
@@ -158,17 +168,36 @@
   border-radius: 0.25rem 0 0 0;
 }
 
-.hover-list-child.features-dd {
-  width: 450px;
+.column-header {
+  position: relative;
+  &::after {
+    position: absolute;
+    content: '';
+    left: 1px;
+    bottom: 0;
+    height: 3px;
+    border-radius: 3px;
+    width: 20px;
+    background-color: $light-energetic-blue;
+  }
 }
 
-
-.hover-list-child.resources-dd {
+.hover-list-child.solutions-dd {
   width: 400px;
 }
 
+.hover-list-child.resources-dd {
+  width: 800px;
+  @include media-breakpoint-up(xl) {
+    width: 1000px;
+  }
+  & .list-item-hover {
+    height: 120px;
+  }
+}
+
 .hover-list-child.pricing-dd {
-  width: 350px;
+  width: 500px;
 }
 
 // Mobile properties
