--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -107,7 +107,7 @@
   transition: 400ms;
   transform: translateX(0);
   &:hover {
-    background-color: $pale-energetic-blue;
+    background-color: $gray-100;
     transition: 400ms;
     .list-item-hover-text {
       color: $deep-blue;
@@ -127,7 +127,7 @@
   width: 100px;
   height: 100px;
   border-radius: 0.25rem;
-  box-shadow: $box-shadow;
+  box-shadow: $box-shadow-wide;
   transform-origin: 50% 0;
   transform: translateY($navbar-min-height);
   position: relative;
