adjust TitleWithGraphic responsiveness

--- a/src/styles/_deco-shapes.scss
+++ b/src/styles/_deco-shapes.scss
@@ -135,27 +135,33 @@
   will-change: transform;
   transform: rotate($background-rotate-degree);
   top: 0;
-  left: -10vw;
-  width: 120vw;
+  left: -20vw;
+  width: 140vw;
   height: 100%;
   &::before {
     content: "";
     position: absolute;
     bottom: -10px;
     height: 10px;
-    width: 30%;
     border-radius: $deco-line-radius;
     background-color:  $energetic-blue;
+    width: 40%;
+    @include media-breakpoint-up(sm) {
+      width: 34%;
+    }
   }
   &::after {
     content: "";
     position: absolute;
     bottom: -20px;
     height: 10px;
-    width: 20%;
     border-radius: $deco-line-radius;
     background-color:  $vibrant-green;
     z-index: 5;
+    width: 30%;
+    @include media-breakpoint-up(sm) {
+      width: 25%;
+    }
   }
 }
 
