--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -126,7 +126,7 @@
   z-index: $zindex-popup;
   width: 100px;
   height: 100px;
-  border-radius: 0.25rem;
+  border-radius: $border-radius-wide;
   box-shadow: $box-shadow-wide;
   transform-origin: 50% 0;
   transform: translateY($navbar-min-height);
@@ -158,8 +158,9 @@
   border-radius: 0.25rem 0 0 0;
 }
 
-.column-header {
+.column-header u {
   position: relative;
+  text-decoration: none;
   &::after {
     position: absolute;
     content: '';
@@ -167,7 +168,7 @@
     bottom: 0;
     height: 3px;
     border-radius: 3px;
-    width: 20px;
+    width: 100%;
     background-color: $light-energetic-blue;
   }
 }
