--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -44,7 +44,6 @@ $box-shadow-light:                  0 2px 4px 1px rgba(30, 43, 70, 0.25), 0 1px 
 $box-shadow-wide:                   0px 0px 20px 5px  rgba(30,43,70,0.04), 0px 4px 10px 0px rgba(30,43,70,0.08), 0px 5px 70px 20px rgba(30,43,70,0.1);
 $navbar-min-height:                 70px !default;
 
-
 // Z-index master list
 $zindex-deco-shape:                 990 !default;
 $zindex-base:                       1000 !default;
@@ -59,7 +58,6 @@ $line-height-xs:              1.3 !default;
 $line-height-sm:              1.5 !default;
 $line-height-lg:              2.2 !default;
 $line-height-xl:              2.5 !default;
-
 
 // Fonts
 $ledgy-font-size:             16px;
@@ -85,3 +83,4 @@ $background-rotate-degree:     6deg;
 
 // Radius:
 $deco-line-radius:             0.25rem;
+$border-radius-wide:           8px;
