--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -104,13 +104,23 @@
 
 .trigger-enter-active .list-item-hover {
   opacity: 1;
-  transition: 400ms;
+  transition: 300ms;
   transform: translateX(0);
+  .list-item-hover-arrow {
+    transition: 300ms;
+    opacity: 0;
+    transform: translateX(0);
+    font-size: 11px;
+  }
   &:hover {
-    background-color: $gray-100;
-    transition: 400ms;
     .list-item-hover-text {
+      transition: color 300ms;
       color: $deep-blue;
+    }
+    .list-item-hover-arrow {
+      opacity: 1;
+      transition: transform 300ms;
+      transform: translateX(6px);
     }
   }
 }
@@ -148,7 +158,7 @@
   transition: 500ms;
 }
 
-.arrow {
+.bubble-tip {
   position: absolute;
   width: 14px;
   height: 14px;
