use TopBannerLayout for demo page

--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -176,6 +176,6 @@ $small-width: 560px;
 }
 
 .card-border-style {
-  border-radius: 10px;
+  border-radius: $border-radius-wide;
   box-shadow: $box-shadow-wide;
 }
