--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -56,14 +56,14 @@
   }
   &.selected {
     color: $gray-800 !important;
-    background-color: $gray-300 !important;
+    background-color: $light-energetic-blue !important;
   }
   &:hover:not(.selected) {
     color: darken($color: $deep-blue, $amount: 10);
-    background-color: lighten($color: $gray-300, $amount: 10);
+    background-color: lighten($color: $light-energetic-blue, $amount: 10);
   }
   &:active {
     color: $gray-800 !important;
-    background-color: $gray-300 !important;
+    background-color: $light-energetic-blue !important;
   }
 }
