--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -207,7 +207,7 @@ input[type=number]::-webkit-outer-spin-button {
   transform: translate(-50%);
   z-index: 1010;
   width: 60vw;
-  box-shadow: 0 5px 4px 0 rgba(0,0,0,.26);
+  box-shadow: $box-shadow-wide;
   @include media-breakpoint-up(md) {
     width: 80vw;
   }
@@ -222,15 +222,14 @@ input[type=number]::-webkit-outer-spin-button {
   transition: 200ms;
   top: 0;
   right: 0;
-  color: $gray-700;
-  @include media-breakpoint-up(lg) {
-    top: 25%;
-    transform: translate(0, -50%);
-    right: 8px;
-  }
+  padding: 12px;
+  color: $gray-500;
+  transition: 300ms;
+  will-change: transform;
   &:hover {
-    background: $gray-100 !important;
-    transition: 200ms;
+    color: $gray-800;
+    transform: scale(1.2);
+    transition: 300ms;
   }
 }
 
