--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -207,7 +207,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 // Publicity banner
-.publicity-banner {
+.bottom-banner {
   width: 60vw;
   box-shadow: $box-shadow-wide;
   @include media-breakpoint-up(md) {
@@ -218,7 +218,7 @@ input[type=number]::-webkit-outer-spin-button {
   }
 }
 
-.publicity-banner--button {
+.bottom-banner--button {
   font-size: 20px;
   line-height: 10px;
   transition: 200ms;
@@ -236,7 +236,6 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 // Customer stories
-
 .company-summary {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   top: calc(#{$navbar-min-height} + 15px);
