add field to control width of long text

--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -1,13 +1,14 @@
 $markdown-font-size: 1.2rem;
 $markdown-spacer: $markdown-font-size;
 $markdown-container-width: 720px;
+$markdown-container-wide-width: 1200px;
+
 
 .markdown-width {
   width: $markdown-container-width;
 }
 
-.markdown {
-  max-width: $markdown-container-width;
+.basic-markdown {
   font-weight: 300;
 
   font-size: $markdown-font-size;
@@ -76,4 +77,14 @@ $markdown-container-width: 720px;
       margin-left: 1em !important;
     }
   }
+}
+
+.markdown {
+  max-width: $markdown-container-width;
+  @extend .basic-markdown
+}
+
+.wide-markdown {
+  max-width: $markdown-container-wide-width;
+  @extend .basic-markdown
 }
