--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,6 +1,7 @@
 
 .navbar {
   min-height: $navbar-min-height;
+  transition: box-shadow 0.3s ease-in-out;
   .btn {
     white-space: nowrap;
   }
@@ -13,6 +14,10 @@
       width: 130px;
     }
   }
+}
+
+.navbar-scroll {
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
 }
 
 @media screen and ( max-height: 699px ) {
