make markdown size smaller

--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -1,4 +1,4 @@
-$markdown-font-size: 1.2rem;
+$markdown-font-size: $ledgy-font-size * 1.12;
 $markdown-spacer: $markdown-font-size;
 $markdown-container-width: 720px;
 $markdown-container-wide-width: 1200px;
