--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -237,6 +237,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 // Customer stories
 .company-summary {
+  font-size: $ledgy-font-size;
+  line-height: 1.5rem;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   top: calc(#{$navbar-min-height} + 15px);
   z-index: $zindex-company-summary;
@@ -248,8 +250,6 @@ input[type=number]::-webkit-outer-spin-button {
 
 .company-summary-quote {
   font-style: italic;
-  font-size: 1.2rem;
-  line-height: 1.5rem;
 }
 
 // Newsletter
