--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -302,6 +302,7 @@ input[type=number]::-webkit-outer-spin-button {
 .card {
   will-change: transform;
   transition: all 0.3s;
+  border-width: 0;
   &:hover {
     box-shadow: $box-shadow-light;
     transition: all 0.3s;
@@ -309,6 +310,8 @@ input[type=number]::-webkit-outer-spin-button {
   }
   &-blog, &-customer-story {
     min-height: 250px;
+    border-radius:  $border-radius-wide;
+    box-shadow: $box-shadow-wide;
   }
   &-blog .gatsby-image-wrapper {
     position: static !important;
@@ -316,6 +319,9 @@ input[type=number]::-webkit-outer-spin-button {
   &-image-wrapper {
     display: table-cell;
     vertical-align: middle;
+    img {
+      border-radius: $border-radius-wide 0 0 $border-radius-wide ;
+    }
   }
   &-more-stories {
     width: 220px;
