--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -332,6 +332,12 @@ input[type=number]::-webkit-outer-spin-button {
     width: 220px;
     height: 350px;
   }
+  &-integration, &-partnership {
+    width: 370px;
+    height: 400px;
+    border-radius:  $border-radius-wide;
+    box-shadow: $box-shadow-lighter;
+  }
 }
 
 .accordion > .card {
