--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -255,9 +255,12 @@ input[type=number]::-webkit-outer-spin-button {
   clip-path: inset(0px -14px -14px -14px);
 }
 .integrations-logo {
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25) ;
   clip-path: inset(-14px -14px 0px -14px);
 }
+.integrations-text {
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
+  clip-path: inset(0px -14px -14px -14px);}
 
 .integrations-card-logo {
   min-height:200px;
