--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -250,27 +250,6 @@ input[type=number]::-webkit-outer-spin-button {
 
 }
 
-.integrations, .partnerships {
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-  clip-path: inset(0px -14px -14px -14px);
-}
-.integrations-logo {
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25) ;
-  clip-path: inset(-14px -14px 0px -14px);
-}
-.integrations-text {
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
-  clip-path: inset(0px -14px -14px -14px);}
-
-.integrations-card-logo {
-  min-height:200px;
-}
-
-.integrations-card-text {
-  min-height:150px;
-}
-
-
 .company-summary-logo {
   max-width: 150px;
 }
@@ -279,6 +258,15 @@ input[type=number]::-webkit-outer-spin-button {
   font-style: italic;
 }
 
+// Market place
+.marketplace-logo {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25) ;
+  clip-path: inset(-14px -14px 0px -14px);
+}
+
+.marketplace-text {
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
+  clip-path: inset(0px -14px -14px -14px);}
 
 // Newsletter
 .newsletter {
