--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -266,8 +266,14 @@ input[type=number]::-webkit-outer-spin-button {
 
 .marketplace-text {
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
-  clip-path: inset(0px -14px -14px -14px);}
+  clip-path: inset(0px -14px -14px -14px);
+}
 
+
+.market-place-test {
+  object-fit: contain;
+
+}
 // Newsletter
 .newsletter {
   max-width: 600px;
@@ -343,11 +349,8 @@ input[type=number]::-webkit-outer-spin-button {
     width: 220px;
     height: 350px;
   }
-  &-integration, &-partnership {
-    width: 300px;
-    // min-height: 350px;
-    border-radius:  $border-radius-wide;
-    box-shadow: $box-shadow-lighter;
+  &-marketplace {
+    height: 220px;
   }
 }
 
