--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,4 +1,3 @@
-
 .navbar {
   min-height: $navbar-min-height;
   transition: box-shadow 0.3s ease-in-out;
@@ -20,7 +19,7 @@
   box-shadow: $box-shadow-lighter;
 }
 
-@media screen and ( max-height: 699px ) {
+@media screen and (max-height: 699px) {
   .sticky-top {
     position: unset !important;
   }
@@ -91,7 +90,6 @@
 .list-item-hover.hide {
   opacity: 0 !important;
   pointer-events: none;
-
 }
 .list-item-hover.show {
   opacity: 1 !important;
@@ -214,6 +212,10 @@
 
 .hover-list-child.pricing-dd {
   width: 500px;
+}
+
+.hover-list-child.company-dd {
+  width: 370px;
 }
 
 // Mobile properties
