fix marketplace pictures button

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -84,3 +84,9 @@
   }
 }
 
+.rotate-icon-button {
+  transform: rotate(90deg);
+  @include media-breakpoint-up(lg) {
+    transform: rotate(0);
+  }
+}
