--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -84,7 +84,7 @@
   }
 }
 
-.rotate-icon-button {
+.marketplace-picture-button {
   transform: rotate(90deg);
   @include media-breakpoint-up(lg) {
     transform: rotate(0);
