--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,15 +1,17 @@
 @font-face {
   font-family: 'Museo Sans Rounded';
   src: url('../../static/fonts/museo-sans-rounded-500.woff2') format('woff2'),
-       url('../../static/fonts/museo-sans-rounded-500.woff') format('woff');
+    url('../../static/fonts/museo-sans-rounded-500.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Museo Sans Rounded';
   src: url('../../static/fonts/museo-sans-rounded-700.woff2') format('woff2'),
-       url('../../static/fonts/museo-sans-rounded-700.woff') format('woff');
+    url('../../static/fonts/museo-sans-rounded-700.woff') format('woff');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
