in the middle of improving the blog page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,12 +1,12 @@
-@import "node_modules/bootstrap/scss/bootstrap";
+@import 'node_modules/bootstrap/scss/bootstrap';
 
 // Colors
-$deep-blue:                       #1e2b46;
-$energetic-blue:                  #43aadc;
-$vibrant-green:                   #1edeb7;
-$highlight-red:                   #e64c49;
-$pale-energetic-blue:             #eaf5fa;
-$light-energetic-blue:            #cbe6f3;
+$deep-blue: #1e2b46;
+$energetic-blue: #43aadc;
+$vibrant-green: #1edeb7;
+$highlight-red: #e64c49;
+$pale-energetic-blue: #eaf5fa;
+$light-energetic-blue: #cbe6f3;
 
 $gray-050: #fbfcfd;
 $gray-100: #f8fafc;
@@ -21,66 +21,68 @@ $gray-900: #212529;
 
 // the following adds our theme colors to the bootstrap theme-colors map
 $theme-colors: (
-  "blue": $deep-blue,
-  "energetic-blue": $energetic-blue,
-  "green": $vibrant-green,
-  "red": $highlight-red,
-  "primary": $deep-blue,
-  "secondary": $pale-energetic-blue,
-  "light-energetic-blue": $light-energetic-blue,
-  "info": $energetic-blue,
-  "success": $vibrant-green,
-  "danger": $highlight-red,
-  "gray-light":$gray-100,
-  "gray-neutral": $gray-500,
-  "black": black,
-  "lightest": $gray-050,
-  "gray-dark": $gray-800,
+  'blue': $deep-blue,
+  'energetic-blue': $energetic-blue,
+  'green': $vibrant-green,
+  'red': $highlight-red,
+  'primary': $deep-blue,
+  'secondary': $pale-energetic-blue,
+  'light-energetic-blue': $light-energetic-blue,
+  'info': $energetic-blue,
+  'success': $vibrant-green,
+  'danger': $highlight-red,
+  'gray-light': $gray-100,
+  'gray-neutral': $gray-500,
+  'black': black,
+  'lightest': $gray-050,
+  'gray-dark': $gray-800
 );
 
-$box-shadow:                        0 8px 16px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
-$box-shadow-light:                  0 2px 4px 1px rgba(30, 43, 70, 0.25), 0 1px 1px rgba(30, 43, 70, 0.15);
-$box-shadow-lighter:                0 0 10px rgba(0,0,0,0.3);
-$box-shadow-wide:                   0px 0px 20px 5px  rgba(30,43,70,0.04), 0px 4px 10px 0px rgba(30,43,70,0.08), 0px 5px 70px 20px rgba(30,43,70,0.1);
-$navbar-min-height:                 70px !default;
+$box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
+$box-shadow-light: 0 2px 4px 1px rgba(30, 43, 70, 0.25), 0 1px 1px rgba(30, 43, 70, 0.15);
+$box-shadow-lighter: 0 0 10px rgba(0, 0, 0, 0.2);
+$box-shadow-wide: 0px 0px 20px 5px rgba(30, 43, 70, 0.04), 0px 4px 10px 0px rgba(30, 43, 70, 0.08),
+  0px 5px 70px 20px rgba(30, 43, 70, 0.1);
+$navbar-min-height: 70px !default;
 
 // Z-index master list
-$zindex-deco-shape:                 990 !default;
-$zindex-base:                       1000 !default;
-$zindex-company-summary:            1005 !default;
-$zindex-navbar:                     1010 !default;
-$zindex-backdrop:                   1020 !default;
-$zindex-popup:                      1030 !default;
-$zindex-popup-toggler:              1040 !default;
+$zindex-deco-shape: 990 !default;
+$zindex-base: 1000 !default;
+$zindex-company-summary: 1005 !default;
+$zindex-navbar: 1010 !default;
+$zindex-backdrop: 1020 !default;
+$zindex-popup: 1030 !default;
+$zindex-popup-toggler: 1040 !default;
 
 // Line height
-$line-height-xs:              1.3 !default;
-$line-height-sm:              1.5 !default;
-$line-height-lg:              2.2 !default;
-$line-height-xl:              2.5 !default;
+$line-height-xs: 1.3 !default;
+$line-height-sm: 1.5 !default;
+$line-height-lg: 2.2 !default;
+$line-height-xl: 2.5 !default;
 
 // Fonts
-$ledgy-font-size:             17px;
+$ledgy-font-size: 17px;
 
-$font-weight-light:           300;
-$font-weight-normal:          400;
-$font-weight-semibold:        500;
-$font-weight-bold:            700;
+$font-weight-light: 300;
+$font-weight-normal: 400;
+$font-weight-semibold: 500;
+$font-weight-bold: 700;
 
-$font-weight-base:            $font-weight-normal;
-$line-height-base:            1.9;
+$font-weight-base: $font-weight-normal;
+$line-height-base: 1.9;
 
-$h1-font-size:                $ledgy-font-size * 2.3;
-$h2-font-size:                $ledgy-font-size * 1.9;
-$h3-font-size:                $ledgy-font-size * 1.7;
-$h4-font-size:                $ledgy-font-size * 1.5;
-$h5-font-size:                $ledgy-font-size * 1.25;
-$h6-font-size:                $ledgy-font-size;
-$huge-font-size:              50px;
+$h1-font-size: $ledgy-font-size * 2.3;
+$h2-font-size: $ledgy-font-size * 1.9;
+$h3-font-size: $ledgy-font-size * 1.7;
+$h4-font-size: $ledgy-font-size * 1.5;
+$h5-font-size: $ledgy-font-size * 1.25;
+$h6-font-size: $ledgy-font-size;
+$huge-font-size: 50px;
 
 // Rotate angles
-$background-rotate-degree:     6deg;
+$background-rotate-degree: 6deg;
 
 // Radius:
-$deco-line-radius:             0.25rem;
-$border-radius-wide:           8px;
+$deco-line-radius: 0.25rem;
+$border-radius-wide: 8px;
+$border-radius-light: 3px;
