--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -1,6 +1,5 @@
-
 .container {
-   @media screen and (min-width: 1440px) {
+  @media screen and (min-width: 1440px) {
     max-width: 1200px !important;
   }
 }
@@ -22,7 +21,7 @@
 .footer {
   @include media-breakpoint-up(md) {
     &--logo-section {
-     height: 100%;
+      height: 100%;
     }
   }
   .nav-link {
@@ -67,8 +66,8 @@
   color: $gray-400;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -130,7 +129,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 .pricing-plan {
   height: 210px;
-  &.Premium { // will be renamed to Scaleup
+  &.Premium {
+    // will be renamed to Scaleup
     height: 250px;
   }
   &.Enterprise {
@@ -150,7 +150,6 @@ input[type=number]::-webkit-outer-spin-button {
     border: 4px solid;
   }
 }
-
 
 // Testimonials
 .avatar {
@@ -175,7 +174,7 @@ input[type=number]::-webkit-outer-spin-button {
   }
 }
 
-.testimonial-image-wrapper{
+.testimonial-image-wrapper {
   height: 40px;
   width: auto;
 }
@@ -200,7 +199,7 @@ input[type=number]::-webkit-outer-spin-button {
 .testimonial-description::after {
   font-size: 1.5rem;
   line-height: 1;
-  opacity: .5;
+  opacity: 0.5;
 }
 
 // Banner container
@@ -259,7 +258,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 // Market place
 .marketplace-logo {
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25) ;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   clip-path: inset(-14px -14px 0px -14px);
 }
 
@@ -318,25 +317,25 @@ input[type=number]::-webkit-outer-spin-button {
 .card {
   will-change: transform;
   transition: all 0.3s;
-  &:hover {
-    box-shadow: $box-shadow-wide;
-    transition: all 0.3s;
-    transform: translateZ(10px) !important;
-  }
-  &-blog, &-customer-story {
+  height: 520px;
+  overflow: hidden;
+  &-blog,
+  &-customer-story {
     min-height: 250px;
-    border-radius:  $border-radius-wide;
-    box-shadow: $box-shadow-lighter;
+    border-radius: $border-radius-light;
     border-width: 0;
   }
-  &-blog .gatsby-image-wrapper {
-    position: static !important;
-  }
   &-image-wrapper {
-    display: table-cell;
-    vertical-align: middle;
+    .gatsby-image-wrapper {
+      width: 100% !important;
+      height: 100% !important;
+    }
+    position: inherit;
+    aspect-ratio: calc(400 / 225);
+    overflow: hidden;
     img {
-      border-radius: $border-radius-wide 0 0 $border-radius-wide ;
+      object-fit: cover;
+      object-position: center;
     }
   }
   &-more-stories {
@@ -346,11 +345,38 @@ input[type=number]::-webkit-outer-spin-button {
   &-marketplace {
     height: 220px;
   }
-}
 
-.accordion > .card {
-  border: 1px solid $gray-300 !important;
-  border-radius: $border-radius !important;
+  &:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: $energetic-blue;
+    transform-origin: bottom left;
+    transition: transform 0.4s ease-out;
+  }
+  &:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+  }
+
+  .content {
+    p {
+      width: auto;
+      display: block;
+      overflow: hidden;
+      white-space: inherit;
+      height: $ledgy-font-size * 6;
+      text-overflow: ellipsis;
+    }
+    &-footer {
+      position: absolute;
+      bottom: 0px;
+    }
+  }
 }
 
 // Partners
@@ -394,13 +420,12 @@ input[type=number]::-webkit-outer-spin-button {
   }
 }
 
-
 // Border with accent
 $border-width: 2px;
 $padding-default: 1.25rem;
 $padding-lg: 3rem;
-@mixin getLeft($padding){
- left: calc(-#{$padding} - #{$border-width});
+@mixin getLeft($padding) {
+  left: calc(-#{$padding} - #{$border-width});
 }
 
 .left-border-with-accent {
@@ -443,7 +468,6 @@ $padding-lg: 3rem;
   }
 }
 
-
 // Selectable card
 .selectable-card {
   cursor: pointer;
@@ -467,7 +491,6 @@ $padding-lg: 3rem;
   }
 }
 
-
 // Rounded screenshots
 .screenshot {
   box-shadow: $box-shadow-wide;
@@ -481,15 +504,15 @@ $padding-lg: 3rem;
 
 // Page wrappers
 @mixin gray-deco-shape() {
-  background-image: url("../img/svg/gray-deco-shape.svg");
+  background-image: url('../img/svg/gray-deco-shape.svg');
   background-repeat: no-repeat;
 }
 .main-wrapper-1 {
- @include gray-deco-shape;
+  @include gray-deco-shape;
   background-position: -10% 30%;
 }
 .main-wrapper-2 {
- @include gray-deco-shape;
+  @include gray-deco-shape;
   background-position: 50% 97%;
 }
 .top-page-wrapper {
