responsive 3 columns blog page

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -317,7 +317,6 @@ input[type='number']::-webkit-outer-spin-button {
 .card {
   will-change: transform;
   transition: all 0.3s;
-  height: 520px;
   overflow: hidden;
   &-blog,
   &-customer-story {
@@ -337,6 +336,13 @@ input[type='number']::-webkit-outer-spin-button {
       object-fit: cover;
       object-position: center;
     }
+  }
+  &-title {
+    height: 80px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
   }
   &-more-stories {
     width: 220px;
@@ -366,11 +372,12 @@ input[type='number']::-webkit-outer-spin-button {
   .content {
     p {
       width: auto;
-      display: block;
       overflow: hidden;
       white-space: inherit;
       height: $ledgy-font-size * 6;
-      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
     }
     &-footer {
       position: absolute;
