--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -233,9 +233,18 @@ input[type='number']::-webkit-outer-spin-button {
   transition: 300ms;
   will-change: transform;
   &:hover {
-    color: $gray-800;
     transform: scale(1.2);
     transition: 300ms;
+  }
+  &-light {
+    &:hover {
+      color: $gray-100;
+    }
+  }
+  &-dark {
+    &:hover {
+      color: $gray-800;
+    }
   }
 }
 
@@ -507,5 +516,10 @@ $padding-lg: 3rem;
     -moz-hyphens: none;
     -ms-hyphens: none;
     hyphens: none;
+  }
+  .popup-close {
+    position: absolute;
+    top: 13px;
+    right: 13px;
   }
 }
