--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -62,6 +62,10 @@
   list-style: none;
 }
 
+.will-change-unset {
+  will-change: unset !important;
+}
+
 .text-nowrap {
   white-space: nowrap;
 }
@@ -126,9 +130,15 @@ $small-width: 560px;
 }
 
 @keyframes swinging {
-  from { transform: translateX(0px); }
-  70%  { transform: translateX(5px); }
-  to   { transform: translateX(0px); }
+  from {
+    transform: translateX(0px);
+  }
+  70% {
+    transform: translateX(5px);
+  }
+  to {
+    transform: translateX(0px);
+  }
 }
 
 .swinging {
