Top banner for updates

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -229,22 +229,29 @@ input[type='number']::-webkit-outer-spin-button {
   top: 0;
   right: 0;
   padding: 12px;
-  color: $gray-500;
+
   transition: 300ms;
   will-change: transform;
   &:hover {
     transform: scale(1.2);
     transition: 300ms;
   }
+}
+.close--button {
   &-light {
+    color: $gray-500;
     &:hover {
       color: $gray-100;
     }
   }
   &-dark {
+    color: $gray-500;
     &:hover {
       color: $gray-800;
     }
+  }
+  &-blue {
+    color: $deep-blue;
   }
 }
 
@@ -521,5 +528,25 @@ $padding-lg: 3rem;
     position: absolute;
     top: 13px;
     right: 13px;
+  }
+}
+
+// top info banner
+.topBanner {
+  display: block;
+  width: 100vw;
+  background: $vibrant-green;
+  text-align: center;
+  .close-cont {
+    position: absolute;
+    left: 40px;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .topBanner {
+    .close-cont {
+      visibility: hidden;
+    }
   }
 }
