--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -229,7 +229,7 @@ input[type='number']::-webkit-outer-spin-button {
   top: 0;
   right: 0;
   padding: 12px;
-
+  color: $gray-500;
   transition: 300ms;
   will-change: transform;
   &:hover {
