Added partnership page

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -66,6 +66,17 @@
   color: $gray-400;
 }
 
+select:required:invalid {
+  color: $gray-400 !important;
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: '';
+}
+
 input[type='number']::-webkit-inner-spin-button,
 input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
