add competitors table

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -628,3 +628,30 @@ $padding-lg: 3rem;
     }
   }
 }
+
+.competitor-table-row {
+  div h4 {
+    margin: 0px;
+  }
+  p {
+    margin: 4px 0px;
+  }
+  // box-shadow: 0 4px 2px -2px $gray-300;
+  div:nth-of-type(1) {
+    flex: 2;
+  }
+  .check {
+    font-size: 21px;
+    color: #12aa59;
+  }
+  .cross {
+    font-size: 21px;
+    color: #af1010;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .competitor-table-row div h4 {
+    font-size: 21px !important;
+  }
+}
