use new pricing modal on landing page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -32,6 +32,7 @@ $theme-colors: (
   "success": $vibrant-green,
   "danger": $highlight-red,
   "gray-light":$gray-100,
+  "gray-light-neural":$gray-300,
   "gray-neutral": $gray-500,
   "black": black,
   "lightest": $gray-050,
