--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -134,9 +134,6 @@ input[type='number']::-webkit-outer-spin-button {
     @include pricing-border;
   }
 }
-.pricing-col.border-energetic-blue {
-  border: 4px solid;
-}
 
 .pricing-plan {
   height: 210px;
@@ -150,6 +147,43 @@ input[type='number']::-webkit-outer-spin-button {
   @include media-breakpoint-up(lg) {
     height: 300px !important;
   }
+}
+
+.pricing-cell {
+  -webkit-font-smoothing: antialiased;
+}
+
+.pricing-plan-name {
+  font-weight: 600 !important;
+}
+
+.pricing-plan-description > .text-muted {
+  font-size: 12.5px;
+  line-height: 1.5;
+  margin-bottom: 6px;
+  color: #73818f !important;
+}
+
+.pricing-plan-price {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.pricing-plan-price  > .text-muted{
+  font-size: 12.5px;
+  line-height: 1.5;
+  color: #73818f;
+
+}
+
+.pricing-plan-includes {
+  font-weight: 600 !important;
+}
+
+.pricing-cell-normal {
+  font-size: 15px !important;
+  line-height: 1.5 !important;
 }
 
 .investor-pricing-plan {
