--- a/src/styles/_twocolumnslayout.scss
+++ b/src/styles/_twocolumnslayout.scss
@@ -1,15 +1,4 @@
-.twocolumns__layout {
-  @media (max-width: 767px) {
-    padding: 0 20px;
-  }
-  .container {
-    .row {
-      &:first-child {
-        margin-top: -12rem;
-      }
-    }
-  }
-}
+
 
 .twocolumnsrow__wrapper {
   width: 100%;
@@ -84,7 +73,7 @@
   }
 
   &.activeTab {
-    color: #6156bb;
+    color: $vibrant-green;
   }
   &:not(:last-child) {
     margin-right: 1.25rem;
@@ -95,7 +84,7 @@
     left: 0;
     right: 0;
     height: 1px;
-    background: #6156bb;
+    background: $vibrant-green;
     z-index: 10;
   }
 }
@@ -139,7 +128,7 @@
   }
   &__subtitle {
     font-size: 1.125rem;
-    color: #6156bb;
+    color: $deep-blue;
     font-weight: 600;
     margin-bottom: 1rem;
     line-height: 1.2;
@@ -158,7 +147,7 @@
   }
   &__link {
     a {
-      color: #52bd94;
+      color: $energetic-blue;
       font-size: 1.125rem;
       font-weight: 700;
       position: relative;
@@ -174,7 +163,7 @@
         position: absolute;
         width: 100%;
         left: 0;
-        background-color: #52bd94;
+        background-color: $energetic-blue;
         height: 2px;
         bottom: 0;
         transform-origin: bottom right;
@@ -201,6 +190,7 @@
   justify-content: center;
   position: relative;
   width: 35.5rem;
+  padding: 20px;
 
   @media (max-width: 767px) {
     order: -1;
@@ -220,8 +210,13 @@
       padding: 0;
     }
   }
+  .gatsby-image-wrapper{
+    border-radius: 10px;
+
+  }
   img {
     width: 100%;
-    filter: drop-shadow(16px 80px 48px rgba(38, 46, 79, 0.2));
+
+
   }
 }
