--- a/src/styles/_twocolumnslayout.scss
+++ b/src/styles/_twocolumnslayout.scss
@@ -1,5 +1,3 @@
-
-
 .twocolumnsrow__wrapper {
   width: 100%;
   margin: 0 0 2.5rem 0;
@@ -16,7 +14,8 @@
     justify-content: center;
   }
   @media (max-width: 767px) {
-    order: -1;
+    order: 0;
+    margin-top: 40px;
   }
 
   &__left {
@@ -30,7 +29,6 @@
     align-items: center;
     max-width: 36.5rem;
     overflow-y: hidden;
-    overflow-x: scroll;
     position: relative;
     mask-image: linear-gradient(
       90deg,
@@ -93,6 +91,14 @@
   align-items: center;
   justify-content: space-between;
   height: 32rem;
+
+  &--hide-on-bd {
+    @media (min-width: 768px) {
+      display: none;
+      opacity: 0;
+      z-index: -1;
+    }
+  }
   @media (max-width: 992px) {
     height: 20rem;
   }
@@ -110,7 +116,15 @@
   @media (max-width: 767px) {
     width: 100%;
     max-width: 100%;
-    margin-top: 1.25rem;
+    margin-top: 0;
+  }
+
+  &--hide-on-sd {
+    @media (max-width: 767px) {
+      display: none;
+      opacity: 0;
+      z-index: -1;
+    }
   }
 
   &__right {
@@ -193,7 +207,6 @@
   padding: 20px;
 
   @media (max-width: 767px) {
-    order: -1;
     width: 100%;
   }
 
@@ -210,13 +223,10 @@
       padding: 0;
     }
   }
-  .gatsby-image-wrapper{
+  .gatsby-image-wrapper {
     border-radius: 10px;
-
   }
   img {
     width: 100%;
-
-
   }
 }
