--- a/src/styles/_logos.scss
+++ b/src/styles/_logos.scss
@@ -1,11 +1,10 @@
 .fullHeightTestimonial {
   width: 100%;
-  background-color: #133095;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
+  // clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
 }
 
 .fullHeightTestimonial__wrapper {
-  padding: 7.5rem 3rem 14rem 3rem;
+  padding: 3rem 3rem ;
   @media (max-width: 992px) {
     padding: 7.5rem 0 14rem 0;
   }
@@ -43,7 +42,7 @@
     grid-template-columns: 1fr;
   }
   &-left {
-    padding: 2.85rem;
+    padding: 2.25rem;
     border-bottom-right-radius: 5rem;
     @media (max-width: 610px) {
       padding: 2.25rem 1.25rem;
@@ -55,15 +54,13 @@
     justify-content: space-between;
     align-items: flex-start;
     &--logo {
-      svg {
-        fill: #fff;
-      }
+      filter:  brightness(0) invert(1);
     }
     &--text {
-      font-size: 1.5rem;
+      font-size: 1.4rem;
       line-height: 1.45;
       color: #fff;
-      margin: 2rem 4rem 2rem 0;
+      margin: 1rem 4rem 1rem 0;
       min-height: 252px;
       @media (max-width: 992px) {
         min-height: 100%;
@@ -87,7 +84,7 @@
     }
     &--designation {
       opacity: 0.5;
-      font-size: 0.75rem;
+      font-size: 0.85rem;
       @media (max-width: 610px) {
         font-size: 0.625rem;
       }
@@ -113,7 +110,7 @@
       }
     }
     &--text {
-      font-size: 1.42rem;
+      font-size: 1.3rem;
       line-height: 1.3;
       margin-top: 2rem;
       font-weight: 600;
@@ -227,10 +224,9 @@
     &.activeLogo {
       opacity: 1;
     }
-    span {
-      svg {
-        fill: #fff;
-      }
+    img {
+      filter:  brightness(0) invert(1);
     }
   }
 }
+
