--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -11,3 +11,7 @@
 @import "navbar";
 @import "buttons";
 @import "deco-shapes";
+@import "logos";
+@import "twocolumnslayout";
+@import "partnershiplogos";
+@import "logosgridsection";
