Add product hunt as a top baner type

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -466,7 +466,7 @@ input[type='number']::-webkit-outer-spin-button {
 
 // Product hunt
 .product-hunt-logo {
-  width: 180px;
+  height: 46px;
 }
 
 // Signatories
