--- a/src/styles/_twocolumnslayout.scss
+++ b/src/styles/_twocolumnslayout.scss
@@ -12,6 +12,7 @@
 
   @media (max-width: 992px) {
     justify-content: center;
+    margin-top: 3.5rem;
   }
   @media (max-width: 767px) {
     order: 0;
