--- a/src/styles/_blog.scss
+++ b/src/styles/_blog.scss
@@ -60,7 +60,7 @@
 }
 
 // BLOG GRID CSS
-.blog-grid {
+.post-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 1.25rem;
@@ -108,7 +108,11 @@
 
   &-image--wrapper {
     width: 100%;
+    display: flex;
     overflow: hidden;
+    height: 200px;
+    align-items: center;
+    justify-content: center;
     background: #f9f9f9;
   }
 
@@ -252,8 +256,7 @@ html, body{
       letter-spacing: 0.5px;
       font-weight: 600;
       padding: 0;
-      color: $green;
-
+      color: $energetic-blue;
       @media (max-width: 767px) {
         font-size: 14px;
       }
