--- a/src/styles/_logosgridsection.scss
+++ b/src/styles/_logosgridsection.scss
@@ -1,8 +1,7 @@
-.logosgridsection {
+.logos_grid_section {
   padding: 4rem 0;
   &__info {
-    max-width: 37.5rem;
-    margin: 0 auto;
+    margin: 60px auto;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -11,49 +10,18 @@
       max-width: 100%;
       padding: 0 20px;
     }
-    &-title {
-      h2 {
-        font-weight: 600;
-        font-size: 3.25rem;
-        text-align: center;
-        line-height: 1.05 !important;
-        color: $gray-900;
-        @media (max-width: 767px) {
-          font-size: 38px;
-        }
-      }
-    }
-    &-description {
-      p {
-        text-align: center;
-        font-size: 1.0625rem;
-        line-height: 1.65;
-        color: $gray-700;
-        @media (max-width: 767px) {
-          font-size: 16px;
-        }
-      }
-    }
-    &-btn {
-      a {
-        color: $gray-050;
-        font-size: 0.85rem;
-        padding: 8px 16px;
-        font-weight: 600;
-        span {
-          margin-left: 0.5rem;
-        }
-      }
-    }
   }
 
-  .logosgrid {
-    margin-top: 2.25rem;
+  .logos_grid {
+    margin-top: 1.75rem;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
     @media (max-width: 992px) {
       width: 100%;
+    }
+    @media (min-width: 1440px) {
+      width: 60%;
     }
 
     &__grid {
@@ -74,20 +42,17 @@
       border: 1px solid rgba(0, 0, 0, 0.1);
       border-radius: 3px;
       transition: all 0.25s;
+      display: flex;
+      margin: 5px;
+      align-items: center;
+      justify-content: center;
 
       &:hover,
       &:active,
       &:focus {
         background: rgba(0, 0, 0, 0.03);
       }
-      img {
-        width: 2.5rem;
-        height: 2.5rem;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
+
       #logoName {
         color: #fff;
         background-color: rgba(0, 0, 0, 0.8);
